panel: add TE2 trace function
Separates code for tracing implementation, and adds function for TE2
tracepoint.

Bug: 261073288
Test: execute trace, check logs for its existence
Change-Id: I50b90b3685e524241460b9c73a79c518ef3bee2a
Signed-off-by: Taylor Nelms <tknelms@google.com>

--- a/gs_panel/Kbuild
+++ b/gs_panel/Kbuild
@@ -10,6 +10,7 @@ gs-panel-y += drm_bridge_funcs.o
 gs-panel-y += drm_panel_funcs_defaults.o
 gs-panel-y += gs_panel_connector_funcs.o
 gs-panel-y += gs_panel_sysfs.o
+gs-panel-y += gs_panel_trace.o
 gs-panel-y += gs_panel_funcs_defaults.o
 gs-panel-$(CONFIG_DEBUG_FS) += gs_panel_debugfs.o
 
