--- a/gs_panel/Kbuild
+++ b/gs_panel/Kbuild
@@ -12,6 +12,7 @@ gs-panel-y += gs_panel_connector_funcs.o
 gs-panel-y += gs_panel_sysfs.o
 gs-panel-y += gs_panel_trace.o
 gs-panel-y += gs_panel_funcs_defaults.o
+gs-panel-y += gs_panel_lhbm.o
 gs-panel-$(CONFIG_DEBUG_FS) += gs_panel_debugfs.o
 
 obj-$(CONFIG_GS_DRM_PANEL_UNIFIED) += gs-panel.o
